--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@ body{
   margin:0;
   font-family: Arial, Helvetica, sans-serif;
   text-align:center;
-  background:
-    linear-gradient(rgba(255,255,255,.85), rgba(255,255,255,.95)),
-    url("assets/nola-bg.jpg");
+  background: linear-gradient(rgba(255,255,255,.85), rgba(255,255,255,.95)), url("nola-bg.png");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
