--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
-body{
-  margin:0;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align:center;
-  background: linear-gradient(rgba(255,255,255,.85), rgba(255,255,255,.95)), url("nola-bg.png");
-  background-size: cover;
+body {
+margin:0;
+font-family:Arial;
+text-align:center;
+
+background:
+linear-gradient(rgba(255,255,255,.85),
+rgba(255,255,255,.95)),
+url("nola-bg.png");
+
+background-size:cover;
+background-position:center;
+background-repeat:no-repeat;
+}
   background-position: center;
   background-attachment: fixed;
 }
