--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ text-align:center;
 background:
 linear-gradient(rgba(255,255,255,.85),
 rgba(255,255,255,.95)),
-url("nola-bg.png");
+url("./nola-bg.png");
 
 background-size:cover;
 background-position:center;
