--- a/style.css
+++ b/style.css
@@ -31,9 +31,10 @@ url("./nola-bg.png");
 }
 
 .logo{
-  width: 96%;
-  max-width: 760px;
-  height: auto;
+  width:90%;
+  max-width:520px;
+  height:auto;
+}
   display:block;
   margin: 0 auto;
   filter: drop-shadow(0 10px 25px rgba(0,0,0,.18));
